--- a/create_listing/index.html
+++ b/create_listing/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Listing - Auction House</title>
-
+    <meta
+      name="description"
+      content="Create a new auction listing on Auction House. Add multiple images, set a deadline, and start accepting bids."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
