--- a/feed/index.html
+++ b/feed/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auction House - Browse Listings</title>
+    <meta
+      name="description"
+      content="Browse active auction listings on Auction House. Search, filter by tags, and place bids on unique items."
+    />
+    <title>Browse Listings - Auction House</title>
+
+    <meta property="og:title" content="Browse Listings - Auction House" />
+    <meta
+      property="og:description"
+      content="Browse active auction listings on Auction House. Search, filter by tags, and place bids on unique items."
+    />
+    <meta property="og:type" content="website" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
