--- a/login/index.html
+++ b/login/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Auction House</title>
+    <meta
+      name="description"
+      content="Login to your Auction House account to create listings, place bids, and manage your profile."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
