--- a/profile/index.html
+++ b/profile/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="View your Auction House profile - manage your listings, bids, and won auctions."
+    />
     <title>Profile - Auction House</title>
+
+    <meta property="og:title" content="Profile - Auction House" />
+    <meta
+      property="og:description"
+      content="View your Auction House profile - manage your listings, bids, and won auctions."
+    />
+    <meta property="og:type" content="profile" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
