--- a/register/index.html
+++ b/register/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register - Auction House</title>
+    <meta
+      name="description"
+      content="Create a new account on Auction House. Join our community of collectors and start bidding on unique items."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
