--- a/single_page/index.html
+++ b/single_page/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vintage Camera Collection - Auction House</title>
+    <meta
+      name="description"
+      content="View auction listing details, place bids, and see bid history on Auction House."
+    />
+    <title>Listing Details - Auction House</title>
+
+    <meta property="og:title" content="Listing Details - Auction House" />
+    <meta
+      property="og:description"
+      content="View auction listing details, place bids, and see bid history on Auction House."
+    />
+    <meta property="og:type" content="website" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
