--- a/update_listing/index.html
+++ b/update_listing/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Create Listing - Auction House</title>
+    <meta
+      name="description"
+      content="Update your auction listing on Auction House. Edit title, description, images, and deadline."
+    />
+    <title>Update Listing - Auction House</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
